# CTU-Agent-v0

./: .gitignore  .gitmodules  =  =0.8.3  CLAUDE.md  CRITICAL_FIX_TAXONOMY_EVAL.md  FINAL_IMPROVEMENTS_SUMMARY.md  MODEL_UPDATE_FIX.md  PARSER_VALIDATION_FIX.md  README.md  README_tau_bench_integration.md  RETAIL_TRAINING_COMPARISON.md  REWARDS_ZERO_FIX.md  REWARD_CALCULATION.md  REWARD_ISSUES_ANALYSIS.md  SIMPLIFIED_REWARD_STRUCTURE.md  SKYRL_CHANGES.md  SKYRL_MIGRATION_PLAN.md  TAU_BENCH_ENVIRONMENT_FIXES.md  TAXONOMY_FEEDBACK_USAGE.md  TEST_EVALUATION_LOGS.md  TOOL_CALLING_PROGRESS.md  _my_test.py  _traj_peeker.ipynb  _traj_peeker_retail_grpo.ipynb  check_tau_outputs.py  conversion_requirements.txt  convert_ckpt_to_hf_model.py  debug_hydra_args.py  examine_parquet.py  llm_judge.py  log_peek.ipynb  new_skyrl_changes.md  prepare_multi_domain_data.sh  pyproject.toml  sanbox_notebook.ipynb  tau_bench_integration_plan.md  test_all_improvements.py  test_conversation_format.py  test_environment_fix.py  (+15 more)
ctu_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_prep/: __init__.py  convert_multi_domain.py  convert_tau_data.py  convert_test_tasks.py  inspect_training_data.ipynb  prompts.py
evaluation_logs/: .gitkeep  README.md
novel_datasets/: doordash_20250803_212917_577tasks.py  doordash_20250803_213239_582tasks.py  healthcare_20250804_001648_570tasks.py  healthcare_20250804_003848_550tasks.py  telecom_20250804_012108_520tasks.py  telecom_20250804_015609_580tasks.py  train_tasks_doordash.py  train_tasks_doordash.py.bak  train_tasks_doordash.py.bak2  (+6 more)
(+2216 files in other folders)
