[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctu-agent"
version = "0.1.0"
description = "CTU Agent - AI agent for tau_bench tasks"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers", 
    "datasets",
    "pandas",
    "numpy",
    "omegaconf",
    "hydra-core",
    "wandb",
    "scikit-learn",
    "openai",
    "tiktoken",
]

[project.optional-dependencies]
vllm = [
    "vllm==0.6.1.post2",
    "ray",
]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-dir]
"" = "."
